--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- vending style -->
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="src/css/style.css">
 
     </head>
 
@@ -22,7 +22,7 @@
         <aside>
 
             <header>
-                <img src="img/2-removebg-preview_2-removebg-preview.png" alt=""  class="icon">
+                <img src="src/img/2-removebg-preview_2-removebg-preview.png" alt=""  class="icon">
                 <h2>BRUNSWICK SQ MALL VENDING MACHINE</h2>
             </header>
 
@@ -35,66 +35,70 @@
                 <section>
 
                     <a href="index.html" class="list-item">
-                        <img src="img/dashicon.png" alt="dashimage" class="icon2">
+                        <img src="src/img/dashicon.png" alt="dashimage" class="icon2">
                         <span class="description">Dashboard</span>
                     </a>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/TCPM.svg" alt="dashimage" class="icon2">
-                            <span class="description">Top Category Per Month</span>
-                        </a>
-                    </article>
+                    <ul>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/TCPM.svg" alt="dashimage" class="icon2">
+                                <span class="description">Top Category Per Month</span>
+                            </a>
+                        </li>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/TMSP.svg" alt="dashimage" class="icon2">
-                            <span class="description">Top 10 Most Sold Product</span>
-                        </a>
-                    </article>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/TMSP.svg" alt="dashimage" class="icon2">
+                                <span class="description">Top 10 Most Sold Product</span>
+                            </a>
+                        </li>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/APPP.svg" alt="dashimage" class="icon2">
-                            <span class="description">Average Price Per Product</span>
-                        </a>
-                    </article>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/APPP.svg" alt="dashimage" class="icon2">
+                                <span class="description">Average Price Per Product</span>
+                            </a>
+                        </li>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/ATPM.svg" alt="dashimage" class="icon2">
-                            <span class="description">Average Transaction Value Per Paymenth Metode</span>
-                        </a>
-                    </article>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/ATPM.svg" alt="dashimage" class="icon2">
+                                <span class="description">Average Transaction Value Per Paymenth Metode</span>
+                            </a>
+                        </li>
+                    </ul>
 
                 </section>
 
                 <section>
 
                     <a href="#" class="list-item">
-                        <img src="img/ATPM.svg" alt="teamreportimage" class="icon2">
+                        <img src="src/img/analytics-xxl.png" alt="teamreportimage" class="icon2">
                         <span class="description">Analytics</span>
                     </a>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/ATPM.svg" alt="aboutusimage" class="icon2">
-                            <span class="description">Team Report</span>
-                        </a>
-                    </article>
+                    <ul>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/team-svgrepo-com.svg" alt="aboutusimage" class="icon2">
+                                <span class="description">Team Report</span>
+                            </a>
+                        </li>
 
-                    <article>
-                        <a href="#" class="list-item">
-                            <img src="img/ATPM.svg" alt="aboutusimage" class="icon2">
-                            <span class="description">Conclusion & Recommendation</span>
-                        </a>
-                    </article>
+                        <li>
+                            <a href="#" class="list-item">
+                                <img src="src/img/recommendation.svg" alt="aboutusimage" class="icon2">
+                                <span class="description">Conclusion & Recommendation</span>
+                            </a>
+                        </li>
+                    </ul>
 
                 </section>
 
                 <section>
                     <a href="#" class="list-item">
-                        <img src="img/ATPM.svg" alt="aboutusimage" class="icon2">
+                        <img src="src/img/about-svgrepo-com.svg" alt="aboutusimage" class="icon2">
                         <span class="description">About Us</span>
                     </a>
                 </section>
@@ -103,16 +107,16 @@
         
         </aside>
 
-        <header>
-            <h1>
+        <header class="header2">
+            <h2>
                 Dashboard
-            </h1>
+            </h2>
 
             <section>
                 <form class="searchbar" action="">
         
                     <button class="searchbtn" type="submit">
-                        <img src="img/searchicon.png" alt="">
+                        <img src="src/img/searchicon.png" alt="">
                     </button>
 
                     <input type="text" placeholder="Search...." name="search">
@@ -122,9 +126,10 @@
 
             <section>
 
-                <h4>Team 4 Jayapura</h4>
-                <img src="" alt="profilepict">
-
+                <a href="#">
+                    <!-- <h4>Team 4 Jayapura</h4> -->
+                    <img src="src/img/team 4 jayapura 1.svg" alt="profilepict" class="profile">
+                </a>
             </section>
 
         </header>
