--- a/index.html
+++ b/index.html
@@ -137,5 +137,11 @@
 
         </main>
 
+        <footer>
+            <section>
+                <h6>team4.jayapura@gmail.com</h6>
+            </section>
+        </footer>
+
     </body>
 </html>
