update link footer

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 
                     <section class="socialIcn">
         
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
-                        <a href=""><i class="fa-google fa-gmail"></i></a>
+                        <a href="https://www.instagram.com/team4jayapura?igsh=MW05M3c4NTM3ZXp6Mw==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/Kampus-Merdeka-Software-Engineering/km-feb24-jayapura-4" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=team4.jayapura@gmail.com" target="_blank"><i class="fa-google fa-gmail"></i></a>
 
                     </section>
         
