--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <link rel="stylesheet" href="src/css/style.css">
         <link rel="stylesheet" href="src/css/responsive.css">
 
+        <!-- favicon -->
+        <link rel="icon" href="src/img/2-removebg-preview_2-removebg-preview.png">
+
+
     </head>
 
     <body>
