--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
                     <h4>Project Background</h4>
                     <div class="container">
                         <div class="card">
-                            <!-- <img src="" alt="Chart 1"> --><canvas id="chartbartotal"></canvas>
+                            <canvas id="chartbartotal"></canvas>
                             <p>Increasing average revenue peaks in Juni</p>
                         </div>
                         <div class="card">
-                            <!-- <img src="" alt="Chart 2"> --> <canvas id="chartlinetotal"></canvas>
+                            <canvas id="chartlinetotal"></canvas>
                             <p>Increasing revenue shows an uptren</p>
                         </div>
                     </div>
@@ -276,8 +276,8 @@
 
             <section class="cr">
                 <article class="C-R">
-                    <h4 class="judul-cr">Conclusion</h4>
                     <div class="conc-recom">
+                        <h4 class="judul-cr">Conclusion</h4>
                         <ol>
                             <li>Adding variety without considering customer preferences can increase the risk of low
                                 demand and stock wastage.</li>
@@ -296,8 +296,8 @@
                 </article>
 
                 <article class="C-R">
-                    <h4 class="judul-cr">Recommendation</h4>
                     <div class="conc-recom">
+                        <h4 class="judul-cr">Recommendation</h4>
                         <ol>
                             <li>Conduct further market research to understand more specific consumer preferences and
                                 trends.</li>
