--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="kolom">
                             <h2>Our Story of Team 4</h2>
                             <p>
-                                Welcome to Group 4 Section Jayapura Independent Study PT. Educational Dream Revolution.
+                                Welcome to Group 4 Section Jayapura Independent Study PT.Revolusi Cita Edukasi.
                                 Find out our story in building a capstone project where we are a business data analytics
                                 group for a Vending Machine company.
                             </p>
@@ -348,7 +348,7 @@
                         <div class="kolom">
                             <h2>About Team 4</h2>
                             <p>
-                                We are Team 4 data analytics Section Jayapura PT. Educational Cita Revolution dedicated
+                                We are Team 4 data analytics Section Jayapura PT.Revolusi Cita Edukasi dedicated
                                 to exploring the meaning of every data point. With a rigorous approach and sophisticated
                                 algorithms, we turn raw data into valuable insights for your business. We believe that
                                 hidden within every dataset is great potential, and we are committed to helping you
