Memperbaiku kata yang keliru

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                                 behind forming the problem statement, determining the main cause, matrix
                                                 and hypothesis. So from the results of the work a business statement was
                                                 produced from the capstone project which determined how to increase
-                                                sales at Guttenplans from 37.9 to 42% within 6 years, and a background
+                                                sales at BRUNSWICK SQ MALL from 37.9 to 42% within 6 months, and a background
                                                 and analysis of the main causes of the things analyzed from the capstone
                                                 project was produced.
                                             </p>
@@ -445,7 +445,7 @@
                 </div>
 
                 <section id="about">
-                    <h1>About Us</h1>
+                    <h1>About People</h1>
                     <p>A team called Team 4-Jayapura which consists of 13 people from 4 different divisions (Project Leader, Front End Engineer, Deployment Team, Pitch Deck Team, and Quality Assurance).</p>
                     <h2>Meet the people behind Team 4 - Jayapura.</h2>
                     <div class="team-grid">
