--- a/index.html
+++ b/index.html
@@ -197,16 +197,7 @@
                     <article class="c">
                         <label for="chart3">Average Price Per Product</label>
                         <!-- <canvas id="chart3"></canvas> -->
-                        <table id="tabelchart" class="display" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Product</th>
-                                    <th>Month</th>
-                                    <th>Average_Price</th>
-                                    <th>Total Sales</th>
-                                </tr>
-                            </thead>
-                        </table>
+                        <table id="tabelchart" class="display" style="width:100%"></table>
                     </article>
 
                     <article class="c" id="myChart">
