--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 
                     <a href="https://www.instagram.com/team4jayapura?igsh=NXY1dmZkb3c0M2Qz" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/Kampus-Merdeka-Software-Engineering/km-feb24-jayapura-4" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class='bx bxl-gmail'></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=team4.jayapura@gmail.com" rel="noopener" target="_blank"><i class='bx bxl-gmail'></i></a>
 
                 </section>
 
