--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <BR>
                 <div class="wrapper">
                     <!-- untuk home -->
-                    <section id="home">
+                    <section class="story" id="home">
                         <div class="kolom">
                             <h2>Our Story of Team 4</h2>
                             <p>
